{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 51,
  "lineage": "11398491-bdeb-f012-20ae-9b489310982c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ccb5ab73-bcce-448c-a4b7-04801bf09a70/resourceGroups/vnetrg/providers/Microsoft.Network/networkSecurityGroups/treinamento-nsg",
            "location": "brazilsouth",
            "name": "treinamento-nsg",
            "resource_group_name": "vnetrg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnetrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "regras_entrada_liberada",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "101",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ccb5ab73-bcce-448c-a4b7-04801bf09a70/resourceGroups/vnetrg/providers/Microsoft.Network/networkSecurityGroups/treinamento-nsg/securityRules/portaentrada_80",
            "name": "portaentrada_80",
            "network_security_group_name": "treinamento-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "vnetrg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "102",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ccb5ab73-bcce-448c-a4b7-04801bf09a70/resourceGroups/vnetrg/providers/Microsoft.Network/networkSecurityGroups/treinamento-nsg/securityRules/portaentrada_443",
            "name": "portaentrada_443",
            "network_security_group_name": "treinamento-nsg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "vnetrg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "103",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ccb5ab73-bcce-448c-a4b7-04801bf09a70/resourceGroups/vnetrg/providers/Microsoft.Network/networkSecurityGroups/treinamento-nsg/securityRules/portaentrada_3389",
            "name": "portaentrada_3389",
            "network_security_group_name": "treinamento-nsg",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "vnetrg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "104",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ccb5ab73-bcce-448c-a4b7-04801bf09a70/resourceGroups/vnetrg/providers/Microsoft.Network/networkSecurityGroups/treinamento-nsg/securityRules/portaentrada_22",
            "name": "portaentrada_22",
            "network_security_group_name": "treinamento-nsg",
            "priority": 104,
            "protocol": "Tcp",
            "resource_group_name": "vnetrg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/8"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f59c956f-8fbe-40bd-8119-34d2c463334b",
            "id": "/subscriptions/ccb5ab73-bcce-448c-a4b7-04801bf09a70/resourceGroups/rg-terraform-modulo-5-1/providers/Microsoft.Network/virtualNetworks/vnet_treinamento_azure",
            "location": "brazilsouth",
            "name": "vnet_treinamento_azure",
            "resource_group_name": "rg-terraform-modulo-5-1",
            "vm_protection_enabled": false
          }
        }
      ]
    }
  ]
}